--- a/frontend_react/index.html
+++ b/frontend_react/index.html
@@ -2,24 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/theme_fansgames/images/fav_logo"
-    />
+    <link rel="icon" type="image/svg+xml" href="/theme_fansgames/images/fav_logo.jpg"/>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"
     />
-
     <!-- google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet" />
-
     <!-- fontsawsome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-
     <!-- styles css  -->
     <link rel="stylesheet" href="/theme_fansgames/css/owl.carousel.min.css" />
     <lin  rel="stylesheet" href="/theme_fansgames/css/owl.theme.default.min.css"/>
