working on gaming platform done

--- a/frontend_react/index.html
+++ b/frontend_react/index.html
@@ -21,6 +21,8 @@
     <!-- <link rel="stylesheet" href="/theme_fansgames/css/preloader.css" /> -->
     <link rel="stylesheet" href="/theme_fansgames/css/reels.css" />
     <link rel="stylesheet" href="/theme_fansgames/css/navbar.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js" />
+    
 
     <title>Welcome to FG</title>
     <meta name="description" content="FG Entertainment Application" />
